--- a/iobuilders-wallets-boot/src/main/resources/application.yml
+++ b/iobuilders-wallets-boot/src/main/resources/application.yml
@@ -1,8 +1,12 @@
 server:
-  port: 8080
+  port: 8081
 
 management:
   endpoints:
     web:
       exposure:
         include: health, info
+
+users:
+  url: http://localhost:8080
+  path: /users
